7/25/11 intermediate check-in of two-atom molecule model and view
# 0.00.02 (54482) Jul 25, 2011
7/25/11 add "Import from file" option to Molecule combo box, so that non-developers can experiment Jmol file formats, see #3018
7/25/11 tested more file formats with Jmol, see #3018
7/21/11 tested various file formats with Jmol, see #3018
7/20/11 add developer control for entering and executing Jmol scripts
# 0.00.01 (54332) Jul 20, 2011
7/19/11 dev version to demonstrate Jmol features and integration in "Real Molecules" tab
7/19/11 add Jmol classes that are dynamically loaded to proguard-template.pro
7/19/11 add dipole offsets, so that dipoles don't intersect atoms and bonds
7/19/11 add placeholder for periodic table
7/19/11 add "Molecule" label to combo box control
7/19/11 render molecule combo box items at HTMLNodes
7/19/11 delete acetone, because we should only include real molecules with one central atom
7/19/11 add hand cursor to Jmol viewer node
7/19/11 add View control for atom labels
7/19/11 setForeground(red) for controls that are not implemented
7/19/11 remove Jmol atom labels
7/19/11 increase width of dipoles, default is a little difficult to see
7/19/11 add combo box for selecting real molecule
7/19/11 wire up Jmol viewer to controls
7/19/11 integrate Jmol into "Real Molecules" tab
7/19/11 remove dependencies on jmol-phet
7/18/11 feasibility test of many Jmol features
7/18/11 add dependencies on Jmol, create test harness for integration of Jmol with Piccolo
7/13/11 hide clock controls in all modules, this sim has no clock controls
7/12/11 add rudimentary E-field plates
7/12/11 converted to floating control panels
7/11/11 created electronegativity control
7/11/11 created control panels
7/11/11 set up localized strings
7/11/11 created project and set up skeleton